# EchoNousModelConversion

./: .gitignore  README.md  pyproject.toml
scripts/: compile_tflite_schema.py  remove_view_json_import.patch  repos.yaml  sync_ml_projects.py  tflite.fbs
src/echonous/exporters/: TFLite_Exporter.py  ai_edge_exporter.py  coreml_exporter.py  fb_tflite_metadata.py  tflite_print_metadata.py
src/echonous/exporters/_tflite_schema/: tflite_generated.py  tflite_metadata_generated.py
src/echonous/models/: __init__.py  catalog.yaml  loaders.py
tests/exporters/: sample_models.py  test_ai_edge_converter.py
